# bunner

./: .copilotrc.json  .dependency-cruiser.cjs  .env.example  .gitignore  .lintstagedrc.json  .oxlintrc.jsonc  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  AUTOMATION.md  CLAUDE.md  COMMITS.md  CONTRIBUTING.md  Cargo.toml  DEAD_CODE_POLICY.md  DEPENDENCIES.md  DOCUMENTATION_REVIEW.md  GEMINI.md  GOVERNANCE.md  INVARIANTS.md  LICENSE  MCP_PLAN.md  MULTI_AGENTS_PLAN.md  Makefile  OPTIMIZATION.md  PLAN-v2.md  PLAN-v3.md  PLAN-v4.md  PLAN-v5.md  PLAN.md  POLICY.md  README.ko.md  README.md  REMAIN.md  REPORT.md  REQUIREMENTS.md  ROADMAP.md  SAFEGUARDS.md  SECURITY.md  (+31 more)
packages-ffi/core/logger/: Cargo.toml
packages-ffi/core/logger/src/: lib.rs
packages-ffi/core/logger/tests/: ffi_test.rs  integration_test.rs
packages-ffi/http-server/: Cargo.toml  ROUTER.md  test_scheme.rs
packages-ffi/http-server/benches/: router.rs  routes_simple.json
packages-ffi/http-server/src/: callback_dispatcher.rs  context.rs  enum.rs  enums.rs  errors.rs  ffi.rs  helpers.rs  lib.rs  pointer_registry.rs  pointer_registry_test.rs  request_handler.rs  structure.rs  thread_pool.rs  util.rs
packages-ffi/http-server/src/errors/: http_server_error.rs  internal_error.rs  mod.rs
packages-ffi/http-server/src/middleware/: body_parser.rs  chain.rs  cookie_parser.rs  header_parser.rs  mod.rs  url_parser.rs  url_parser.rs.backup
packages-ffi/http-server/src/request_handler/: callback_dispatcher.rs  handler.rs  helpers.rs  mod.rs  request_handler.rs  structures.rs  types.rs
packages-ffi/http-server/src/router/: compress.rs  errors.rs  ffi.rs  interner.rs  mod.rs  path.rs  pattern.rs  radix.rs  radix_tree.rs  readonly.rs  regex_guard.rs  structures.rs
packages-ffi/http-server/src/router/radix/: alloc.rs  compress.rs  find.rs  insert.rs  node.rs
packages-ffi/http-server/src/router/radix_tree/: alloc.rs  builder.rs  compression.rs  find.rs  indices.rs  insert.rs  mask.rs  memory.rs  (+3 more)
packages-ffi/http-server/src/utils/: json.rs  json_test.rs  json_utils.rs  json_utils_test.rs  mod.rs  string.rs  string_test.rs
packages-ffi/http-server/tests/: common.rs  ffi_test.rs  helper.rs  middleware_test.rs  mod.rs  request_handler_test.rs  router_integration_test.rs  router_test.rs  routes.json  thread_pool_test.rs
packages-ffi/http-server/tests/ffi/: common.rs  concurrency.rs  lifecycle.rs  mod.rs  request_processing.rs  resource_management.rs  route_management.rs  router_sealing.rs  utilities.rs
packages-ffi/http-server/tests/middleware/: body_processing.rs  cookie_processing.rs  header_processing.rs  mod.rs  url_processing.rs
packages-ffi/http-server/tests/request_handler/: concurrency_handling.rs  header_processing.rs  mod.rs  payload_parsing.rs  request_validation.rs  routing_engine.rs
packages-ffi/http-server/tests/router/: behavior.rs  bulk_registration.rs  matching.rs  mod.rs  optimizations.rs  performance.rs  registration.rs  security.rs
packages-ffi/http-server/tests/thread_pool/: environment_variables.rs  job_execution.rs  mod.rs  queue_capacity.rs  resilience.rs  shutdown_semantics.rs
rust-packages/http-server/: Cargo.toml
rust-packages/http-server/src/: app.rs  app_handle_request_dispatcher.rs  app_registry.rs  app_request_callback_dispatcher.rs  constants.rs  enums.rs  helpers.rs  http_server_registry.rs  lib.rs  pointer_registry.rs  pointer_registry_test.rs  request_callback_dispatcher.rs  structures.rs  thread_pool.rs  types.rs
rust-packages/http-server/src/errors/: codes.rs  ffi_error.rs  http_server_error.rs  internal_error.rs  mod.rs
rust-packages/http-server/src/http_server/: mod.rs  registry.rs  server.rs  types.rs
rust-packages/http-server/src/middleware/: body_parser.rs  chain.rs  cookie_parser.rs  header_parser.rs  url_parser.rs
rust-packages/http-server/src/middlewares/: body_parser.rs  cookie_parser.rs  header_parser.rs  middleware_chain.rs  mod.rs  traits.rs  url_parser.rs
rust-packages/http-server/src/request_handler/: callback_dispatcher.rs  handler.rs  helpers.rs  mod.rs  types.rs
rust-packages/http-server/src/router/: errors.rs  mod.rs  path.rs  pattern.rs  radix_tree.rs  readonly.rs  structures.rs
rust-packages/http-server/src/utils/: ffi.rs  ffi_test.rs  json.rs  json_test.rs  mod.rs  string.rs  string_test.rs
rust-packages/http-server/tests/common/: mod.rs  pointer_util.rs  registry_util.rs  string_util.rs
rust-packages/http-server/tests/utils/: json.rs  mod.rs  pointer.rs  registry.rs  string.rs
(+629 files in other folders)
