[workspace]
members = [
  "rust-packages/core/logger",
  "rust-packages/http-server"
]
resolver = "2"

[workspace.dependencies]
libc = "0.2"
libloading = "0.8"
rstest = "0.23"

[workspace.metadata.cargo-udeps.ignore]
normal = []
development = ["rstest"]
build = []

# Test configuration for GitHub Copilot context
[workspace.metadata.testing]
guide = "TEST_GUIDE.md"
naming_convention = "*_test.rs"
helper_module = "tests/helpers.rs"
