[package]
name = "bunner-http-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "bunner_http_server"
crate-type = ["rlib", "cdylib"]

[dependencies]
parking_lot = "0.12"
smallvec = "1"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hashbrown = "0.14"
dashmap = "5"
regex-syntax = "0.8"

[dev-dependencies]
libloading = "0.8"
