[package]
name = "bunner-http-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "bunner_http_server"
crate-type = ["rlib", "cdylib"]

[dependencies]
parking_lot = "0.12"
smallvec = "1"
hashbrown = "0.14"
dashmap = "5"
bumpalo = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memchr = "2"
aho-corasick = "1.1.3"
serde_qs = "0.15"
url = "2.5"
bitflags = "2"

[dev-dependencies]
criterion.workspace = true
libc.workspace = true
jemalloc-ctl.workspace = true
jemallocator.workspace = true
rstest.workspace = true
