[package]
name = "bunner-http-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "bunner_http_server"
crate-type = ["rlib", "cdylib"]

[dependencies]
parking_lot = "0.12"
smallvec = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
hashbrown = "0.14"
dashmap = "5"
bumpalo = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memchr = "2"
bitflags = "2"
url = "2"
cookie = "0.18"
serde_qs = "0.15"
crossbeam-channel = "0.5"

[dev-dependencies]
libc.workspace = true
rstest.workspace = true

[features]
default = []
test = []