[package]
name = "bunner_http_server"
version = "0.1.0"
edition = "2024"

[lib]
name = "bunner_http_server"
crate-type = ["rlib", "cdylib"]

[dependencies]
parking_lot = "0.12"
smallvec = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
hashbrown = "0.14"
bumpalo = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memchr = "2"
bitflags = "2"
url = "2"
serde_qs = "0.15"
crossbeam-channel = "0.5"
percent-encoding = "2"
simd-json = { version = "0.13", features = ["serde_impl"], optional = true }
lazy_static = "1.5.0"
uuid = { version = "1.18", features = ["v4", "fast-rng", "std"] }
publicsuffix = "2"
cookie = "0.18"

[dev-dependencies]
libc.workspace = true
rstest.workspace = true

[features]
default = []
