[package]
name = "bunner-core-logger"
version = "0.1.0"
edition = "2024"

[lib]
name = "bunner_core_logger"
crate-type = ["rlib", "cdylib"]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21"
libc.workspace = true

[dev-dependencies]
libloading.workspace = true
rstest.workspace = true
